--- a/contactus.css
+++ b/contactus.css
@@ -262,45 +262,144 @@ padding: 10px;
 
 
 /* footer css */
-
-.sign-in{
-    padding: 2px; 
-    border-radius:10%;
-    background: none;
-     margin: 1%;
-     font-size: 20px;
-     width: 7%;
-     border: 2px solid #f3e8e8 ;
-     font-family: "montserrat";
-     transition: 0.8s;
-     position: relative;
-     overflow: hidden;
-     cursor: pointer;
-     height: 1%;
-     color: #f3e8e8;
-}
-
-.sign-in::before{
-content:"";
-position: absolute;
-left: 0;
-width: 100%;
-height: 1%;
-background:#f3e8e8 ;
-z-index: 1;
-transition: 0.5s;
-}
-.sign-in::before{
-    top: 0;
-    border-radius: 0 0 50% 50%;
-}
-  .sign-in:hover::before{
-      height: 180%;
-      content: "Sign In";
-      padding-top: 6%;
-      color: #21120A;
+   
+/* Target desktops and larger screens */
+@media only screen and (min-width: 1024px) {
+    .sign-in{
+        padding: 2px; 
+        border-radius:10%;
+        background: none;
+         margin: 1%;
+         font-size: 20px;
+         width: 7%;
+         border: 2px solid #f3e8e8 ;
+         font-family: "montserrat";
+         transition: 0.8s;
+         position: relative;
+         overflow: hidden;
+         cursor: pointer;
+         height: 1%;
+         color: #f3e8e8;
+    }
+    .sign-in::before{
+        content:"";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 1%;
+        background:#f3e8e8 ;
+        z-index: 1;
+        transition: 0.5s;
+        }
+        .sign-in::before{
+            top: 0;
+            border-radius: 0 0 50% 50%;
+        }
+          .sign-in:hover::before{
+              height: 180%;
+              content: "Sign In";
+              padding-top: 6%;
+              color: #21120A;
+          }
+        
+    .querySet3{
+        padding: 10px;
+    }
+   
   }
 
+/* Target tablets (portrait and landscape), including iPads */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .querySet3{
+        padding: 10px;
+    }
+    .sign-in{
+        padding: 2px; 
+        border-radius:10%;
+        background: none;
+         margin: 1%;
+         font-size: 20px;
+         width: 10%;
+         border: 2px solid #f3e8e8 ;
+         font-family: "montserrat";
+         transition: 0.8s;
+         position: relative;
+         overflow: hidden;
+         cursor: pointer;
+         height: 1%;
+         color: #f3e8e8;
+    }
+    .sign-in::before{
+        content:"";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 1%;
+        background:#f3e8e8 ;
+        z-index: 1;
+        transition: 0.5s;
+        }
+        .sign-in::before{
+            top: 0;
+            border-radius: 0 0 50% 50%;
+        }
+          .sign-in:hover::before{
+              height: 180%;
+              content: "Sign In";
+              padding-top: 6%;
+              color: #21120A;
+          }
+        
+    
+  }
+  
+
+/* Target phones (portrait and landscape) */
+@media only screen and (max-width: 767px) {
+    .querySet3{
+        
+            padding: 10px;
+        }
+        .sign-in{
+            padding: 2px; 
+            border-radius:10%;
+            background: none;
+             margin: 1%;
+             font-size: 20px;
+             width: 25%;
+             border: 2px solid #f3e8e8 ;
+             font-family: "montserrat";
+             transition: 0.8s;
+             position: relative;
+             overflow: hidden;
+             cursor: pointer;
+             height: 1%;
+             color: #f3e8e8;
+        }
+        .sign-in::before{
+            content:"";
+            position: absolute;
+            left: 0;
+            width: 100%;
+            height: 1%;
+            background:#f3e8e8 ;
+            z-index: 1;
+            transition: 0.5s;
+            }
+            .sign-in::before{
+                top: 0;
+                border-radius: 0 0 50% 50%;
+            }
+              .sign-in:hover::before{
+                  height: 180%;
+                  content: "Sign In";
+                  padding-top: 6%;
+                  color: #21120A;
+              }
+            
+    }
+  
+    
   .footerimg {
     /* //background linear-gradient will form a layer over the image (0.9) is the opacity that you can increase or decrease. url is for the image that you want to put in the div  */
     background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('img/f1.jpg' );
