--- a/home.css
+++ b/home.css
@@ -219,7 +219,9 @@ padding: 10px;
 
 
 
-.carousel-item {
+   /* Target desktops and larger screens */
+@media only screen and (min-width: 1024px) {
+    .carousel-item {
     height: 700px;
 }
 
@@ -230,16 +232,52 @@ padding: 10px;
 .resptxth{
     font-size: 60px
 }
-@media (max-width: 790px) {
+  }
+
+/* Target tablets (portrait and landscape), including iPads */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
     .resptxt{
-        font-size:medium;
+        font-size:small;
     }
 .resptxth{
-    font-size: 40px;
+    font-size:30px;
 }
 .resptxtlast{
-    font-size: small;
-}}
+    display: none;
+}
+.carousel-item {
+    height: 400px;
+}
+
+
+.carousel {
+    position: relative;
+}
+
+  }
+  
+
+/* Target phones (portrait and landscape) */
+@media only screen and (max-width: 767px) {
+    .resptxt{
+        font-size:small;
+    }
+.resptxth{
+    font-size:30px;
+}
+.resptxtlast{
+    display: none;
+}
+.carousel-item {
+    height: 300px;
+}
+
+
+.carousel {
+    position: relative;
+}
+
+  }
 
 
 /* it's for animating text */
@@ -289,63 +327,86 @@ padding: 10px;
 }
 
 
-/* css for welcome div */
+/* css for welcome div and categories card */
 
-
-
-@media (max-width: 790px) {
-    .welcomeimg {
-       padding-left: 90px;
+/* Target desktops and larger screens */
+@media only screen and (min-width: 1024px) {
+    .querySet1{
+        padding-left: 90px;
         width: 75%;
-    }}
-
-
-
- /* categories cards */
-    
-
-
-.card-img-top{
-    height: 400px;
-    width: 300px;
-}
-.catcard{
-    height: 400px;
-    width: 300px;
-    
-}
-.card-title{
-    text-align: center;
-    justify-content: center;
-    color: black;
-}
-@media (max-width:880px) {
+    }
+    .querySet2{
+        width: 75%; margin-top: 80px; padding: 20px 20px 0px 20px; 
+      }
+      .card-img-top{
+        height: 350px;
+        width: 250px;
+    }
     .catcard{
-        width:300px;
-        margin: auto;
+        height: 350px;
+        width: 250px;
     }
-    .card-img-top{
-        width: 200px;
-    }}
-    
-    @media (max-width:764px) {
-        .catcard{
-            width:400px;
-            margin-top: 40px;
-        }
-        .card-img-top{
-            width: auto;
-        }   
+    .card-title{
+        text-align: center;
+        justify-content: center;
+        color: black;
     }
-    @media (max-width:992px) {
-        .catcard{
-            width:200px;
-           
-        }
-        .card-img-top{
-            width: 200px;
-        }   
+    .box-content{
+        border-radius: 10px; margin-top: 30px;
     }
+  }
+
+/* Target tablets (portrait and landscape), including iPads */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .querySet1{
+        padding-left: 70px;
+    }
+    .querySet2{
+        margin-top: 100px; 
+     }
+     .card-img-top{
+        height: 200px;
+        width: 100px;
+    }
+    .catcard{
+        height: 200px;
+        width: 100px;
+        
+    }
+    .card-title{
+        display:none;
+    }
+    .box-content{
+        border-radius: 10px; margin-top: 30px;
+    }
+  }
+  
+
+/* Target phones (portrait and landscape) */
+@media only screen and (max-width: 767px) {
+    .querySet1{
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    .querySet2{
+         margin-top: 50px; padding: 20px 20px 0px 20px; 
+      }
+      .card-img-top{
+        height: 300px;
+        width: 100%;
+    }
+    .catcard{
+        height: 300px;
+        width: 280px;
+        margin-top: 20px;
+    }
+    .card-title{
+        display:none;
+    }
+    .box-content{
+        border-radius: 10px; margin-top: 0px;
+    }
+  }
 
 
 
@@ -567,43 +628,8 @@ input[type="radio"] {
 
 /* footer css */
 
-.sign-in{
-    padding: 2px; 
-    border-radius:10%;
-    background: none;
-     margin: 1%;
-     font-size: 20px;
-     width: 7%;
-     border: 2px solid #f3e8e8 ;
-     font-family: "montserrat";
-     transition: 0.8s;
-     position: relative;
-     overflow: hidden;
-     cursor: pointer;
-     height: 1%;
-     color: #f3e8e8;
-}
 
-.sign-in::before{
-content:"";
-position: absolute;
-left: 0;
-width: 100%;
-height: 1%;
-background:#f3e8e8 ;
-z-index: 1;
-transition: 0.5s;
-}
-.sign-in::before{
-    top: 0;
-    border-radius: 0 0 50% 50%;
-}
-  .sign-in:hover::before{
-      height: 180%;
-      content: "Sign In";
-      padding-top: 6%;
-      color: #21120A;
-  }
+
 
   .footerimg {
     /* //background linear-gradient will form a layer over the image (0.9) is the opacity that you can increase or decrease. url is for the image that you want to put in the div  */
@@ -677,13 +703,7 @@ font-size: x-large;
 .footerlinks:hover{
     color: #523529;
 }
-@media (max-width: 790px) {
-    .welcomeimg {
-  
-        width: 100%;
 
-        
-    }}
     @media (max-width:990px) {
         .footercontactus{
             font-size: small;
@@ -694,3 +714,156 @@ font-size: x-large;
             font-size: small;
         }
     }
+    
+
+
+
+
+    
+/* Target desktops and larger screens */
+@media only screen and (min-width: 1024px) {
+    .sign-in{
+        padding: 2px; 
+        border-radius:10%;
+        background: none;
+         margin: 1%;
+         font-size: 20px;
+         width: 7%;
+         border: 2px solid #f3e8e8 ;
+         font-family: "montserrat";
+         transition: 0.8s;
+         position: relative;
+         overflow: hidden;
+         cursor: pointer;
+         height: 1%;
+         color: #f3e8e8;
+    }
+    .sign-in::before{
+        content:"";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 1%;
+        background:#f3e8e8 ;
+        z-index: 1;
+        transition: 0.5s;
+        }
+        .sign-in::before{
+            top: 0;
+            border-radius: 0 0 50% 50%;
+        }
+          .sign-in:hover::before{
+              height: 180%;
+              content: "Sign In";
+              padding-top: 6%;
+              color: #21120A;
+          }
+        
+    .querySet3{
+        padding: 10px;
+    }
+    .querySet4{
+        height: 300px; width: 360px;
+    }
+   
+  }
+
+/* Target tablets (portrait and landscape), including iPads */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .querySet3{
+        padding: 10px;
+    }
+    .querySet4{
+        height: 300px; width: 360px;
+    }
+    .sign-in{
+        padding: 2px; 
+        border-radius:10%;
+        background: none;
+         margin: 1%;
+         font-size: 20px;
+         width: 10%;
+         border: 2px solid #f3e8e8 ;
+         font-family: "montserrat";
+         transition: 0.8s;
+         position: relative;
+         overflow: hidden;
+         cursor: pointer;
+         height: 1%;
+         color: #f3e8e8;
+    }
+    .sign-in::before{
+        content:"";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 1%;
+        background:#f3e8e8 ;
+        z-index: 1;
+        transition: 0.5s;
+        }
+        .sign-in::before{
+            top: 0;
+            border-radius: 0 0 50% 50%;
+        }
+          .sign-in:hover::before{
+              height: 180%;
+              content: "Sign In";
+              padding-top: 6%;
+              color: #21120A;
+          }
+        
+    
+  }
+  
+
+/* Target phones (portrait and landscape) */
+@media only screen and (max-width: 767px) {
+    .querySet3{
+        
+            padding: 10px;
+        }
+        .querySet4{
+            height: 300px; width: 400px;
+        }
+        .sign-in{
+            padding: 2px; 
+            border-radius:10%;
+            background: none;
+             margin: 1%;
+             font-size: 20px;
+             width: 25%;
+             border: 2px solid #f3e8e8 ;
+             font-family: "montserrat";
+             transition: 0.8s;
+             position: relative;
+             overflow: hidden;
+             cursor: pointer;
+             height: 1%;
+             color: #f3e8e8;
+        }
+        .sign-in::before{
+            content:"";
+            position: absolute;
+            left: 0;
+            width: 100%;
+            height: 1%;
+            background:#f3e8e8 ;
+            z-index: 1;
+            transition: 0.5s;
+            }
+            .sign-in::before{
+                top: 0;
+                border-radius: 0 0 50% 50%;
+            }
+              .sign-in:hover::before{
+                  height: 180%;
+                  content: "Sign In";
+                  padding-top: 6%;
+                  color: #21120A;
+              }
+
+            
+    }
+  
+    
